bug-fix: fixed 403 error on login